Alterar solucao exercicio 1

--- a/Expressões Regulares.ipynb
+++ b/Expressões Regulares.ipynb
@@ -704,32 +704,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Haemophilus\n"
+      "DEFINITION  Human immunodeficiency virus type 1 (isolate genotype C, I5) gag\n",
+      "            gene, partial cds.\n",
+      "\n",
+      "Human immunodeficiency virus type 1 (isolate genotype C, I5) gag gene, partial cds. \n"
      ]
     }
    ],
    "source": [
     "import re\n",
     "\n",
-    "fonte = open(\"L42023.1.gb\",'r')\n",
+    "fonte = open(\"L42022.1.gb\",'r')\n",
     "locus = fonte.read()\n",
     "fonte.close()\n",
     "\n",
-    "existe = re.search(\"^DEFINITION\\s+[\\w.]+\", locus, re.MULTILINE)\n",
-    "#print(existe)\n",
-    "\n",
+    "existe = re.search(r'DEFINITION\\s+[^\\s]+.*?(?=ACCESSION)', locus, re.DOTALL)\n",
     "if existe:\n",
-    "    m = re.match(r'DEFINITION\\s+([^\\s]+)', existe[0] )\n",
-    "    print(m.group(1))\n",
+    "    print( existe[0] )\n",
+    "    m = re.match( r'DEFINITION\\s+(.+)', existe[0], re.DOTALL )\n",
+    "    if m:\n",
+    "        print(re.sub(r'\\s+', ' ', m.group(1) ))\n",
     "else:\n",
-    "    print(\"Definition does not exist.\")"
+    "    print( \"Padrão não encontrado\" )"
    ]
   },
   {
