Alterar solucao exercicio 1

--- a/Expressões Regulares.ipynb
+++ b/Expressões Regulares.ipynb
@@ -704,16 +704,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DEFINITION  Human immunodeficiency virus type 1 (isolate genotype C, I5) gag\n",
-      "            gene, partial cds.\n",
-      "\n",
       "Human immunodeficiency virus type 1 (isolate genotype C, I5) gag gene, partial cds. \n"
      ]
     }
@@ -727,7 +724,7 @@
     "\n",
     "existe = re.search(r'DEFINITION\\s+[^\\s]+.*?(?=ACCESSION)', locus, re.DOTALL)\n",
     "if existe:\n",
-    "    print( existe[0] )\n",
+    "    #print( existe[0] )\n",
     "    m = re.match( r'DEFINITION\\s+(.+)', existe[0], re.DOTALL )\n",
     "    if m:\n",
     "        print(re.sub(r'\\s+', ' ', m.group(1) ))\n",
@@ -866,16 +863,7 @@
      ]
     }
    ],
-   "source": [
-    "import re\n",
-    "\n",
-    "fonte = open(\"L42023.1.gb\",'r')\n",
-    "locus = fonte.read()\n",
-    "fonte.close()\n",
-    "\n",
-    "#existe = re.search(\"^ORIGIN\\s+[\\w.]+\", locus, re.DOTALL)\n",
-    "#print(existe)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
